# A2A

./: .env.example  .gitignore  README.md  config.py  exam_viewer.html  main.py  pyproject.toml
.claude/skills/: database.md  question-formats.md
a2a_local/: __init__.py  client.py  logging_utils.py  server.py
agents/: __init__.py  base_agent.py  concept_guide_agent.py  correctness_agent.py  database_agent.py  geosdf_generator.py  image_agent.py  orchestrator.py  pipeline_controller.py  quality_checker_agent.py  question_generator_agent.py  spatial_generator.py  thinking_skills_agent.py  verifier_agent.py
data/concepts/math/: algebra_patterns.json  data_statistics.json  fractions_decimals.json  geometry.json  measurement.json  number_operations.json  number_theory.json  probability.json
data/concepts/thinking_skills/: analogies.json  critical_thinking.json  deduction.json  inference.json  logical_reasoning.json  numerical_reasoning.json  pattern_recognition.json  sequencing.json  spatial_reasoning.json
models/: __init__.py  adversarial.py  blueprint.py  curriculum.py  judgment.py  question.py  verification.py
prompts/: image_test_prompts.json
prompts/math/images/: image.md
prompts/math/subtopics/: algebra_and_patterns.md  averages.md  base.md  data_and_statistics.md  fractions.md  fractions_and_decimals.md  geometry.md  measurement.md  number_operations.md  number_patterns.md  number_theory.md  percentages.md  probability.md  problem_solving.md  ratios.md  (+1 more)
prompts/verification/: verify_answer.md  verify_explanation.md  verify_format.md  verify_quality.md
(+11 files in other folders)
